--- a/Publications.html
+++ b/Publications.html
@@ -30,32 +30,32 @@
 <p>
 &nbsp
 </p>
-<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Proceedings of Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics - Industry Track</i> (NAACL), 2025. (Also Selected for Oral Presentation).</p>
+<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics: Industry Track</i> (NAACL), 2025. (Also Selected for Oral Presentation).</p>
 <p>
 &nbsp
 </p>
 <li><p><b>Y. Li</b>, D. Wang, and José M. F. Moura.
-        <br>"<a href="https://arxiv.org/pdf/2104.05914.pdf">GSA-Forecaster: Forecasting Graph-Based Time-Dependent Data with Graph Sequence Attention</a>".
-        <br>ACM Transactions on Knowledge Discovery from Data (TKDD), 2025.
+        <br>"<a href="https://dl.acm.org/doi/10.1145/3721435">GSA-Forecaster: Forecasting Graph-Based Time-Dependent Data with Graph Sequence Attention</a>".
+        <br><i>ACM Transactions on Knowledge Discovery from Data</i> (TKDD), 2025.
 </p>
 <p>
 &nbsp
 </p>
 <li><p>Ernie Chang, Matteo Paltenghi, <b>Yang Li</b>, Pin-Jie Lin, Changsheng Zhao, Patrick Huber, Zechun Liu, Rastislav Rabatin, Yangyang Shi, Vikas Chandra.
         <br>"Scaling Parameter-Constrained Language Models with Quality Data</a>".
-<br><i>Proceedings of Conference on Empirical Methods in Natural Language Processing - Industry Track</i> (EMNLP), 2024.</p>
+<br><i>Conference on Empirical Methods in Natural Language Processing: Industry Track</i> (EMNLP), 2024.</p>
 <p>
 &nbsp
 </p>
 <li><p>Ernie Chang, Pin-Jie Lin, <b>Yang Li</b>, Changsheng Zhao, Daeil Kim, Rastislav Rabatin, Zechun Liu, Yangyang Shi, Vikas Chandra.
         <br>"<a href="https://arxiv.org/abs/2409.14705">Target-Aware Language Modeling via Granular Data Sampling</a>".
-<br><i>Proceedings of Conference on Empirical Methods in Natural Language Processing</i> (EMNLP), 2024.</p>
+<br><i>Conference on Empirical Methods in Natural Language Processing</i> (EMNLP), 2024.</p>
 <p>
 &nbsp
 </p>
 <li><p>Maximilian Lam, Jeff Johnson, Wenjie Xiong, Kiwan Maeng, Udit Gupta, <b>Yang Li</b>, Liangzhen Lai, Illias Leontiadis, Minsoo Rhu, Hsien-Hsin Lee, Vijay Janapa Reddi, Gu-Yeon Wei, David Brooks, and Edward Suh.
 	<br>"<a href="https://arxiv.org/abs/2301.10904">GPU-based Private Information Retrieval for On-Device Machine Learning Inference</a>".
-<br><i>Proceedings of ACM International Conference on Architectural Support for Programming Languages and Operating Systems</i> (ASPLOS), 2024. (acceptance rate: 16%).</p>
+<br><i>ACM International Conference on Architectural Support for Programming Languages and Operating Systems</i> (ASPLOS), 2024. (acceptance rate: 16%).</p>
 <p>
 &nbsp
 </p>
@@ -65,40 +65,40 @@
 </p>
 <li><p><b>Yang Li*</b>, Liangzhen Lai*, Yuan Shangguan, Forrest N. Iandola, Zhaoheng Ni, Ernie Chang, Yangyang Shi, and Vikas Chandra.
 	<br>"<a href="https://arxiv.org/pdf/2309.07988v1.pdf">Folding Attention: Memory and Power Optimization for On-Device Transformer-based Streaming Speech Recognition</a>".
-	<br><i>Proceedings of IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
+	<br><i>IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
 <p>
 &nbsp
 </p>
 <li><p>Ernie Chang*, Pin-Jie Lin*, <b>Yang Li</b>, Sidd Srinivasan, Gael Le Lan, David Kant, Yangyang Shi, Forrest Iandola, and Vikas Chandra.
 	<br>"<a href="https://arxiv.org/abs/2311.00895">In-Context Prompt Editing for Conditional Audio Generation</a>".
-	<br><i>Proceedings of IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
+	<br><i>IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
 <p>
 &nbsp
 </p>
 <li><p>Duc Le, Frank Seide, Yuhao Wang, <b>Yang Li</b>, Kjell Schubert, Ozlem Kalinli, and Michael L. Seltzer.
 	<br>"<a href="https://arxiv.org/pdf/2211.00896.pdf">Factorized Blank Thresholding for Improved Runtime Efficiency of Neural Transducers</a>".
-	<br><i>Proceedings of IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2023.
+	<br><i>IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2023.
 </p>
 <p>
 &nbsp
 </p>
 <li>Tong Shen, <b>Yang Li</b>, and José M. F. Moura.
 	<br>"<a href="https://ieeexplore.ieee.org/document/10184813">Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity</a>".
-<br><i>Proceedings of IEEE International Conference on Data Engineering</i> (ICDE), 2023. (acceptance rate: 31%).
+<br><i>IEEE International Conference on Data Engineering</i> (ICDE), 2023. (acceptance rate: 31%).
 </p>
 <p>
 &nbsp
 </p>
 <li><p><b>Y. Li</b> and José M. F. Moura. 
 <br>"<a href="https://jerryyangli.github.io/publications/Forecaster_ECAI2020.pdf">Forecaster: A Graph Transformer for Forecasting Spatial and Time-Dependent Data</a>". 
-<br><i>Proceedings of European Conference on Artificial Intelligence</i> (ECAI), 2020. (acceptance rate: 25%).</p>
+<br><i>European Conference on Artificial Intelligence</i> (ECAI), 2020. (acceptance rate: 25%).</p>
 </li>
 <p>
 &nbsp
 </p>
 <li><p><b>Yang Li</b>, Charles R. Lefurgy, Karthick Rajamani, Malcolm S. Allen-Ware, Guillermo J. Silva, Daniel D. Heimsoth, Saugata Ghose, and Onur Mutlu. 
 <br>"<a href="https://jerryyangli.github.io/publications/CapMaestro_HPCA2019.pdf">A Scalable Priority-Aware Approach to Managing Data Center Server Power</a>".
-<br><i>Proceedings of IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2019 
+<br><i>IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2019 
 (acceptance rate: 22%). 
 </p> <p>Technical report: "<a href="https://andrew.cmu.edu/~yangli1/CapMaestro_Technical_Report.pdf">CapMaestro: exploiting power redundancy, data center-wide priorities, and stranded power for boosting data center performance</a>," in <i>IBM Research Report</i>, 2018. </p> 
 </li>
@@ -107,18 +107,18 @@
  </p> 
 <li><p>Cong Xu, Karthick Rajamani, Alexandre Ferreira, Wesley Felter, Juan Rubio, and <b>Yang Li</b>. 
 <br>"<a href="https://dl.acm.org/citation.cfm?id=3190555">dCat: Dynamic Cache Management for Efficient, Performance-Sensitive Infrastructure-as-a-Service</a>". 
-<br><i>Proceedings of ACM European Conference on Computer Systems</i> (EuroSys), 2018.
+<br><i>ACM European Conference on Computer Systems</i> (EuroSys), 2018.
 (acceptance rate: 16%). </p>
 </li>
 <p> 
 &nbsp
 </p> 
-<li><p><b>Y. Li</b>, Saugata Ghose, Jongmoo Choi, Jin Sun, Hui Wang, and Onur Mutlu.<br>"<a href="https://jerryyangli.github.io/publications/UHMEM_Cluster2017.pdf">Utility-based Hybrid Memory Management</a>". <br><i>Proceedings of IEEE International Conference on Cluster Computing</i> (Cluster), 2017. (acceptance rate: 22%). </p>
+<li><p><b>Y. Li</b>, Saugata Ghose, Jongmoo Choi, Jin Sun, Hui Wang, and Onur Mutlu.<br>"<a href="https://jerryyangli.github.io/publications/UHMEM_Cluster2017.pdf">Utility-based Hybrid Memory Management</a>". <br><i>IEEE International Conference on Cluster Computing</i> (Cluster), 2017. (acceptance rate: 22%). </p>
 </li>
 <p>
 &nbsp
  </p> 
-<li><p><b>Yang Li</b>, Di Wang, Saugata Ghose, Jie Liu, Sriram Govindan, Sean James, Eric Peterson, John Siegler, Rachata Ausavarungnirun, and Onur Mutlu. <br>"<a href="https://jerryyangli.github.io/publications/SizeCap_HPCA2016.pdf">SizeCap: Efficiently Handling Power Surges for Fuel Cell Powered Data Centers</a>". <br><i>Proceedings of IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2016. (acceptance rate: 22%).  </p>
+<li><p><b>Yang Li</b>, Di Wang, Saugata Ghose, Jie Liu, Sriram Govindan, Sean James, Eric Peterson, John Siegler, Rachata Ausavarungnirun, and Onur Mutlu. <br>"<a href="https://jerryyangli.github.io/publications/SizeCap_HPCA2016.pdf">SizeCap: Efficiently Handling Power Surges for Fuel Cell Powered Data Centers</a>". <br><i>IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2016. (acceptance rate: 22%).  </p>
 </li>
 <p>
 &nbsp
@@ -128,12 +128,12 @@
 <p>
 &nbsp
  </p>
-<li><p><b>Yang Li</b> and David Z. Pan. <br>"<a href="https://jerryyangli.github.io/publications/3DIC_DAC2013.pdf">An Accurate Semi-Analytical Framework for Full-Chip TSV-induced Stress modeling</a>". <br><i>Proceedings of IEEE/ACM Design Automation Conference</i> (DAC), 2013. (acceptance rate: 23%).  </p>
+<li><p><b>Yang Li</b> and David Z. Pan. <br>"<a href="https://jerryyangli.github.io/publications/3DIC_DAC2013.pdf">An Accurate Semi-Analytical Framework for Full-Chip TSV-induced Stress modeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013. (acceptance rate: 23%).  </p>
 </li>
 <p> 
 &nbsp
 </p>
-<li><p>Zuochang Ye, Bichen Wu, Song Han, and <b>Yang Li</b>. <br>"<a href="https://ieeexplore.ieee.org/document/6560732">Time-Domain Segmentation based Massively Parallel Simulation for ADCs</a>". <br><i>Proceedings of IEEE/ACM Design Automation Conference</i> (DAC), 2013. (acceptance rate: 23%). </p>
+<li><p>Zuochang Ye, Bichen Wu, Song Han, and <b>Yang Li</b>. <br>"<a href="https://ieeexplore.ieee.org/document/6560732">Time-Domain Segmentation based Massively Parallel Simulation for ADCs</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013. (acceptance rate: 23%). </p>
 </li>
 <p>
 &nbsp
@@ -143,6 +143,6 @@ Local Compensation</a>". <br><i>IEEE Transactions on Microwave Theory and Techni
 <p>
 &nbsp
  </p>
-<li><p>Zuochang Ye, <b>Yang Li</b>, Mingzhi Gao, and Zhiping Yu. <br>"<a href="https://ieeexplore.ieee.org/document/5981975">A Novel Framework for Passive Macromodeling</a>". <br><i>Proceedings of IEEE/ACM Design Automation Conference</i> (DAC), 2011. (acceptance rate: 21%). </p>
+<li><p>Zuochang Ye, <b>Yang Li</b>, Mingzhi Gao, and Zhiping Yu. <br>"<a href="https://ieeexplore.ieee.org/document/5981975">A Novel Framework for Passive Macromodeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2011. (acceptance rate: 21%). </p>
 </li>
 </ul>
