--- a/Publications.html
+++ b/Publications.html
@@ -13,7 +13,7 @@
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Education.html">Education</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Work Experience</a></div>
+<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Professional Experience</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Publications.html">Publications</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Patents.html">Patents</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Teaching.html">Teaching</a></div>
@@ -30,7 +30,7 @@
 <p>
 &nbsp
 </p>
-<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics: Industry Track</i> (NAACL), 2025. (Also Selected for Oral Presentation).</p>
+<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics: Human Language Technologies</i> (NAACL), Industry Track, 2025. (Also Selected for Oral Presentation).</p>
 <p>
 &nbsp
 </p>
@@ -43,7 +43,7 @@
 </p>
 <li><p>Ernie Chang, Matteo Paltenghi, <b>Yang Li</b>, Pin-Jie Lin, Changsheng Zhao, Patrick Huber, Zechun Liu, Rastislav Rabatin, Yangyang Shi, Vikas Chandra.
         <br>"Scaling Parameter-Constrained Language Models with Quality Data</a>".
-<br><i>Conference on Empirical Methods in Natural Language Processing: Industry Track</i> (EMNLP), 2024.</p>
+<br><i>Conference on Empirical Methods in Natural Language Processing</i> (EMNLP), Industry Track, 2024.</p>
 <p>
 &nbsp
 </p>
@@ -55,7 +55,7 @@
 </p>
 <li><p>Maximilian Lam, Jeff Johnson, Wenjie Xiong, Kiwan Maeng, Udit Gupta, <b>Yang Li</b>, Liangzhen Lai, Illias Leontiadis, Minsoo Rhu, Hsien-Hsin Lee, Vijay Janapa Reddi, Gu-Yeon Wei, David Brooks, and Edward Suh.
 	<br>"<a href="https://arxiv.org/abs/2301.10904">GPU-based Private Information Retrieval for On-Device Machine Learning Inference</a>".
-<br><i>ACM International Conference on Architectural Support for Programming Languages and Operating Systems</i> (ASPLOS), 2024. (acceptance rate: 16%).</p>
+<br><i>ACM International Conference on Architectural Support for Programming Languages and Operating Systems</i> (ASPLOS), 2024. </p>
 <p>
 &nbsp
 </p>
@@ -84,14 +84,14 @@
 </p>
 <li>Tong Shen, <b>Yang Li</b>, and José M. F. Moura.
 	<br>"<a href="https://ieeexplore.ieee.org/document/10184813">Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity</a>".
-<br><i>IEEE International Conference on Data Engineering</i> (ICDE), 2023. (acceptance rate: 31%).
+<br><i>IEEE International Conference on Data Engineering</i> (ICDE), 2023.
 </p>
 <p>
 &nbsp
 </p>
 <li><p><b>Y. Li</b> and José M. F. Moura. 
 <br>"<a href="https://jerryyangli.github.io/publications/Forecaster_ECAI2020.pdf">Forecaster: A Graph Transformer for Forecasting Spatial and Time-Dependent Data</a>". 
-<br><i>European Conference on Artificial Intelligence</i> (ECAI), 2020. (acceptance rate: 25%).</p>
+<br><i>European Conference on Artificial Intelligence</i> (ECAI), 2020.</p>
 </li>
 <p>
 &nbsp
@@ -113,12 +113,12 @@
 <p> 
 &nbsp
 </p> 
-<li><p><b>Y. Li</b>, Saugata Ghose, Jongmoo Choi, Jin Sun, Hui Wang, and Onur Mutlu.<br>"<a href="https://jerryyangli.github.io/publications/UHMEM_Cluster2017.pdf">Utility-based Hybrid Memory Management</a>". <br><i>IEEE International Conference on Cluster Computing</i> (Cluster), 2017. (acceptance rate: 22%). </p>
+<li><p><b>Y. Li</b>, Saugata Ghose, Jongmoo Choi, Jin Sun, Hui Wang, and Onur Mutlu.<br>"<a href="https://jerryyangli.github.io/publications/UHMEM_Cluster2017.pdf">Utility-based Hybrid Memory Management</a>". <br><i>IEEE International Conference on Cluster Computing</i> (Cluster), 2017. </p>
 </li>
 <p>
 &nbsp
  </p> 
-<li><p><b>Yang Li</b>, Di Wang, Saugata Ghose, Jie Liu, Sriram Govindan, Sean James, Eric Peterson, John Siegler, Rachata Ausavarungnirun, and Onur Mutlu. <br>"<a href="https://jerryyangli.github.io/publications/SizeCap_HPCA2016.pdf">SizeCap: Efficiently Handling Power Surges for Fuel Cell Powered Data Centers</a>". <br><i>IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2016. (acceptance rate: 22%).  </p>
+<li><p><b>Yang Li</b>, Di Wang, Saugata Ghose, Jie Liu, Sriram Govindan, Sean James, Eric Peterson, John Siegler, Rachata Ausavarungnirun, and Onur Mutlu. <br>"<a href="https://jerryyangli.github.io/publications/SizeCap_HPCA2016.pdf">SizeCap: Efficiently Handling Power Surges for Fuel Cell Powered Data Centers</a>". <br><i>IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2016.  </p>
 </li>
 <p>
 &nbsp
@@ -128,12 +128,12 @@
 <p>
 &nbsp
  </p>
-<li><p><b>Yang Li</b> and David Z. Pan. <br>"<a href="https://jerryyangli.github.io/publications/3DIC_DAC2013.pdf">An Accurate Semi-Analytical Framework for Full-Chip TSV-induced Stress modeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013. (acceptance rate: 23%).  </p>
+<li><p><b>Yang Li</b> and David Z. Pan. <br>"<a href="https://jerryyangli.github.io/publications/3DIC_DAC2013.pdf">An Accurate Semi-Analytical Framework for Full-Chip TSV-induced Stress modeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013.  </p>
 </li>
 <p> 
 &nbsp
 </p>
-<li><p>Zuochang Ye, Bichen Wu, Song Han, and <b>Yang Li</b>. <br>"<a href="https://ieeexplore.ieee.org/document/6560732">Time-Domain Segmentation based Massively Parallel Simulation for ADCs</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013. (acceptance rate: 23%). </p>
+<li><p>Zuochang Ye, Bichen Wu, Song Han, and <b>Yang Li</b>. <br>"<a href="https://ieeexplore.ieee.org/document/6560732">Time-Domain Segmentation based Massively Parallel Simulation for ADCs</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013. </p>
 </li>
 <p>
 &nbsp
@@ -143,6 +143,6 @@ Local Compensation</a>". <br><i>IEEE Transactions on Microwave Theory and Techni
 <p>
 &nbsp
  </p>
-<li><p>Zuochang Ye, <b>Yang Li</b>, Mingzhi Gao, and Zhiping Yu. <br>"<a href="https://ieeexplore.ieee.org/document/5981975">A Novel Framework for Passive Macromodeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2011. (acceptance rate: 21%). </p>
+<li><p>Zuochang Ye, <b>Yang Li</b>, Mingzhi Gao, and Zhiping Yu. <br>"<a href="https://ieeexplore.ieee.org/document/5981975">A Novel Framework for Passive Macromodeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2011. </p>
 </li>
 </ul>
