--- a/Work.html
+++ b/Work.html
@@ -13,14 +13,14 @@
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Education.html">Education</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Work Experience</a></div>
+<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Professional Experience</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Publications.html">Publications</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Patents.html">Patents</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Reviewer.html">Service</a></div>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Work Experience</h1>
+<h1>Professional Experience</h1>
 </div>
 <ul>
 <li><p><b>Meta</b></p>
