--- a/Patents.html
+++ b/Patents.html
@@ -13,7 +13,7 @@
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Education.html">Education</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Professional Experience</a></div>
+<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Work</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Publications.html">Publications</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Patents.html">Patents</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Teaching.html">Teaching</a></div>
