--- a/Publications.html
+++ b/Publications.html
@@ -98,8 +98,7 @@
 </p>
 <li><p><b>Yang Li</b>, Charles R. Lefurgy, Karthick Rajamani, Malcolm S. Allen-Ware, Guillermo J. Silva, Daniel D. Heimsoth, Saugata Ghose, and Onur Mutlu. 
 <br>"<a href="https://jerryyangli.github.io/publications/CapMaestro_HPCA2019.pdf">A Scalable Priority-Aware Approach to Managing Data Center Server Power</a>".
-<br><i>Proceedings of the IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2019 
-(acceptance rate: 22%). 
+<br><i>Proceedings of the IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2019. 
 </p> <p>Technical report: "<a href="https://andrew.cmu.edu/~yangli1/CapMaestro_Technical_Report.pdf">CapMaestro: exploiting power redundancy, data center-wide priorities, and stranded power for boosting data center performance</a>," in <i>IBM Research Report</i>, 2018. </p> 
 </li>
 <p>
@@ -133,7 +132,7 @@
 <p> 
 &nbsp
 </p>
-<li><p>Zuochang Ye, Bichen Wu, Song Han, and <b>Yang Li</b>. <br>"<a href="https://ieeexplore.ieee.org/document/6560732">Time-Domain Segmentation based Massively Parallel Simulation for ADCs</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013. </p>
+<li><p>Zuochang Ye, Bichen Wu, Song Han, and <b>Yang Li</b>. <br>"<a href="https://ieeexplore.ieee.org/document/6560732">Time-Domain Segmentation based Massively Parallel Simulation for ADCs</a>". <br><i>Proceedings of the IEEE/ACM Design Automation Conference</i> (DAC), 2013. </p>
 </li>
 <p>
 &nbsp
