--- a/Publications.html
+++ b/Publications.html
@@ -24,13 +24,25 @@
 <h1>Research Papers </h1>
 </div>
 <ol>
+<p>
+*indicates equal contribution
+&nbsp
+</p>
+
+<li><p>Ernie Chang*, <b>Yang Li*</b>, Patrick Huber, Vish Vogeti, David Kant, Yangyang Shi, Vikas Chandra.
+        <br>"AutoMixer: Checkpoint Artifacts as Automatic Data Mixers</a>".
+<br><i>Proceedings of the Conference of the Association for Computational Linguistics</i> (ACL), 2025.</p>
+<p>
+&nbsp
+</p>
+
 <li><p><b>Yang Li</b>, Changsheng Zhao, Hyungtak Lee, Ernie Chang, Yangyang Shi, Vikas Chandra.
         <br>"<a href="https://arxiv.org/abs/2405.15877">Basis Selection: Low-Rank Decomposition of Pretrained Large Language Models for Target Applications</a>".
 <br>in review at a conference, 2024.</p>
 <p>
 &nbsp
 </p>
-<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Proceedings of the Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics: Human Language Technologies</i> (NAACL), Industry Track, 2025. (Also Selected for Oral Presentation).</p>
+<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"<a href="https://aclanthology.org/2025.naacl-industry.50/">Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Proceedings of the Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics: Human Language Technologies</i> (NAACL), Industry Track, 2025. (Also Selected for Oral Presentation).</p>
 <p>
 &nbsp
 </p>
