--- a/Publications.html
+++ b/Publications.html
@@ -25,7 +25,7 @@
 </div>
 <ol>
 <p>
-*indicates equal contribution
+* indicates equal contribution
 &nbsp
 </p>
 
@@ -38,7 +38,7 @@
 
 <li><p><b>Yang Li</b>, Changsheng Zhao, Hyungtak Lee, Ernie Chang, Yangyang Shi, Vikas Chandra.
         <br>"<a href="https://arxiv.org/abs/2405.15877">Basis Selection: Low-Rank Decomposition of Pretrained Large Language Models for Target Applications</a>".
-<br>in review at a conference, 2024.</p>
+<br>in review at a journal, 2024.</p>
 <p>
 &nbsp
 </p>
