--- a/Publications.html
+++ b/Publications.html
@@ -36,7 +36,7 @@
 &nbsp
 </p>
 
-<li><p><b>Yang Li</b>, Changsheng Zhao, Hyungtak Lee, Ernie Chang, Yangyang Shi, Vikas Chandra.
+<li><p><b>Yang Li</b>, Daniel Asante, Changsheng Zhao, Ernie Chang, Yangyang Shi, Vikas Chandra.
         <br>"<a href="https://arxiv.org/abs/2405.15877">Basis Selection: Low-Rank Decomposition of Pretrained Large Language Models for Target Applications</a>".
 <br>in review at a journal, 2024.</p>
 <p>
@@ -54,7 +54,7 @@
 &nbsp
 </p>
 <li><p>Ernie Chang, Matteo Paltenghi, <b>Yang Li</b>, Pin-Jie Lin, Changsheng Zhao, Patrick Huber, Zechun Liu, Rastislav Rabatin, Yangyang Shi, Vikas Chandra.
-        <br>"Scaling Parameter-Constrained Language Models with Quality Data</a>".
+        <br>"<a href="https://aclanthology.org/2024.emnlp-industry.8/">Scaling Parameter-Constrained Language Models with Quality Data</a>".
 <br><i>Proceedings of the Conference on Empirical Methods in Natural Language Processing</i> (EMNLP), Industry Track, 2024.</p>
 <p>
 &nbsp
