--- a/Teaching.html
+++ b/Teaching.html
@@ -37,6 +37,7 @@
 </p>
 <p><b>Introduction to Computer Architecture and Machine-Level Programming</b></p>
 <p>Spring 2024 teaching score: 4.04 out of 5.0 </p>
+<p>Spring 2025 teaching score: 4.67 out of 5.0 </p>
 </li>
 <p> </p>
 <p>
