--- a/Work.html
+++ b/Work.html
@@ -23,8 +23,15 @@
 <h1>Professional Experience</h1>
 </div>
 <ul>
+<li><p><b>Iowa State University</b></p>
+<p>Assistant Professor of Computer Science, 01/2024 - Present<p>
+<p>
+&nbsp
+</p>
+</li>
+
 <li><p><b>Meta</b></p>
-<p>Senior Research Scientist, 08/2023 - Present<p>
+<p>Senior Research Scientist, 08/2023 - 12/2023<p>
 <p>Research Scientist, 04/2022 - 08/2023<p>
 <p>
 &nbsp
@@ -39,14 +46,14 @@
 </li>
 
 <li><p><b>IBM</b></p>
-<p>Research intern, 05/2016 - 12/2016 and 05/2017 - 12/2017<p>
+<p>Research Intern, 05/2016 - 12/2016 and 05/2017 - 12/2017<p>
 <p>Mentors: Charles Lefurgy, Karthick Rajamani</p>
 <p>
 &nbsp
 </p>
 </li>
 <li><p><b>Microsoft</b></p>
-<p>Research intern, 06/2014 - 08/2014</p>
+<p>Research Intern, 06/2014 - 08/2014</p>
 <p>Mentors: Jie Liu, Di Wang</p>
 <p>
 &nbsp
