--- a/Education.html
+++ b/Education.html
@@ -25,7 +25,6 @@
 <ul>
 <li><p><b>Carnegie Mellon University</b>, Ph.D. in Electrical and Computer Engineering, 2020</p>
 <p>Advisor: Prof. José M. F. Moura</p>
-<p>Committee: Prof. José M. F. Moura, Prof. Yuejie Chi, Prof. Carlee Joe-Wong, Prof. Jelena Kovačević, Dr. Di Wang</p>
 <p>
 &nbsp
 </p>
@@ -40,7 +39,7 @@
 &nbsp
 </p>
 </li>
-<li><p><b>Tsinghua University</b>, B.S. in Automation (computer engineering, control, and AI), 2011</p>
+<li><p><b>Tsinghua University</b>, B.S. in Automation, 2011</p>
 <p>
 &nbsp
 </p>
