--- a/Work.html
+++ b/Work.html
@@ -31,8 +31,8 @@
 </li>
 
 <li><p><b>Meta</b></p>
-<p>Senior Research Scientist, 08/2023 - 12/2023<p>
-<p>Research Scientist, 04/2022 - 08/2023<p>
+<p>Research Scientist (Level 5), 08/2023 - 12/2023<p>
+<p>Research Scientist (Level 4), 04/2022 - 08/2023<p>
 <p>
 &nbsp
 </p>
