--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p></p>
 <table class="imgtable"><tbody><tr><td>
 <img src="./YangLi_files/bio.jpg" alt="alt text" width="187px" height="199px"></a>&nbsp;</td>
-			<td align="left"><p>I am an assistant professor of computer science at Iowa State University. Before that, I was a senior research scientist at Meta and a researcher at Microsoft. I received PhD and MS degrees from Carnegie Mellon University (advisor: <a href="https://www.ece.cmu.edu/directory/bios/moura-jose.html">Prof. José M. F. Moura</a>, member of the National Academy of Engineering), an MSE degree from the University of Texas at Austin, and a BE degree from Tsinghua University. I am a recipient of the IBM Patent Application Award.</p>
+			<td align="left"><p>I am an assistant professor of computer science at Iowa State University. Before that, I was a research scientist at Meta and a researcher at Microsoft. I received PhD and MS degrees from Carnegie Mellon University (advisor: <a href="https://www.ece.cmu.edu/directory/bios/moura-jose.html">Prof. José M. F. Moura</a>, member of the National Academy of Engineering), an MSE degree from the University of Texas at Austin, and a BE degree from Tsinghua University. I am a recipient of the IBM Patent Application Award.</p>
 
 </p><p>
 
