--- a/Publications.html
+++ b/Publications.html
@@ -25,24 +25,31 @@
 </div>
 <ol>
 <p>
-* indicates equal contribution
+* indicates equal contribution; + indicates corresponding author.
+&nbsp
+</p>
+
+<li><p>Md Mokarram Chowdhury*, Daniel Agyei Asante, Ernie Chang, <b>Yang Li*+</b>.
+        <br>"<a href="https://arxiv.org/pdf/2507.03828">IMPACT: Importance-Aware Activation Space Reconstruction</a>".
+<br>under review, 2025.</p>
+<p>
 &nbsp
 </p>
 
 <li><p>Ernie Chang*, <b>Yang Li*</b>, Patrick Huber, Vish Vogeti, David Kant, Yangyang Shi, Vikas Chandra.
-        <br>"AutoMixer: Checkpoint Artifacts as Automatic Data Mixers</a>".
+        <br>"<a href="https://aclanthology.org/2025.acl-long.979">AutoMixer: Checkpoint Artifacts as Automatic Data Mixers</a>".
 <br><i>Proceedings of the Conference of the Association for Computational Linguistics</i> (ACL), 2025.</p>
 <p>
 &nbsp
 </p>
 
-<li><p><b>Yang Li</b>, Daniel Asante, Changsheng Zhao, Ernie Chang, Yangyang Shi, Vikas Chandra.
+<li><p><b>Yang Li*+</b>, Daniel Agyei Asante*, Changsheng Zhao, Ernie Chang, Yangyang Shi, Vikas Chandra.
         <br>"<a href="https://arxiv.org/abs/2405.15877">Basis Selection: Low-Rank Decomposition of Pretrained Large Language Models for Target Applications</a>".
-<br>in review at a journal, 2024.</p>
+<br>under review, 2024.</p>
 <p>
 &nbsp
 </p>
-<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"<a href="https://aclanthology.org/2025.naacl-industry.50/">Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Proceedings of the Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics: Human Language Technologies</i> (NAACL), Industry Track, 2025. (Also Selected for Oral Presentation).</p>
+<li><p><b>Yang Li*+</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"<a href="https://aclanthology.org/2025.naacl-industry.50/">Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Proceedings of the Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics: Human Language Technologies</i> (NAACL), Industry Track, 2025. (Also Selected for Oral Presentation).</p>
 <p>
 &nbsp
 </p>
@@ -71,7 +78,7 @@
 <p>
 &nbsp
 </p>
-<li><p>Jamin Seo, <b>Yang Li</b>, Debabrata Mohapatra, Liangzhen Lai, Hyoukjun Kwon, Tushar Krishna. <br>"Memory Placement Policy Exploration for Dynamic Multi-model Multi-task ML Workloads”.<br> in review at a conference, 2024.</p>
+<li><p>Jamin Seo, <b>Yang Li</b>, Debabrata Mohapatra, Liangzhen Lai, Hyoukjun Kwon, Tushar Krishna. <br>"Memory Placement Policy Exploration for Dynamic Multi-model Multi-task ML Workloads”.<br> under review, 2024.</p>
 <p>
 &nbsp
 </p>
