--- a/Teaching.html
+++ b/Teaching.html
@@ -26,18 +26,18 @@
 <li><p>Instructor, Iowa State University:</p>
 <p>COMS 6730-2 (Fall 2024) <b>Advanced Topics in Machine Learning</b>.
 </p>
-<p>Fall 2024 teaching score: 4.75 out of 5.0 </p>
+<p>Fall 2024 instructor rating: 4.75 out of 5.0 </p>
 </li>
 <p> </p>
 <p>
 &nbsp
 </p>
 <li><p>Instructor, Iowa State University:</p>
-<p>COM S 321-1 (Spring 2024), COMS 3210-3 (Spring 2025)
+<p>COMS 3210-3 (Spring 2025), COM S 321-1 (Spring 2024)
 </p>
 <p><b>Introduction to Computer Architecture and Machine-Level Programming</b></p>
-<p>Spring 2024 teaching score: 4.04 out of 5.0 </p>
-<p>Spring 2025 teaching score: 4.67 out of 5.0 </p>
+<p>Spring 2025 instructor rating: 4.67 out of 5.0 </p>
+<p>Spring 2024 instructor rating: 4.04 out of 5.0 </p>
 </li>
 <p> </p>
 <p>
@@ -54,9 +54,9 @@
 <li><p>Teaching Assistant, Carnegie Mellon University:</p> 
 <p>18-202 <b>Mathematical Foundations for Electrical Engineering</b>, Spring 2017 and Spring 2018. 
 
-<p>Spring 2017 teaching score: A </p>
+<p>Spring 2018 teaching score: A </p>
 
-<p>Spring 2018 teaching score: A</p>
+<p>Spring 2017 teaching score: A</p>
 </p>
 </li>
 <p> </p>
