--- a/Publications.html
+++ b/Publications.html
@@ -44,8 +44,8 @@
 </p>
 
 <li><p><b>Yang Li*+</b>, Daniel Agyei Asante*, Changsheng Zhao, Ernie Chang, Yangyang Shi, Vikas Chandra.
-        <br>"<a href="https://arxiv.org/abs/2405.15877">Basis Selection: Low-Rank Decomposition of Pretrained Large Language Models for Target Applications</a>".
-<br>under review, 2025.</p>
+        <br>"<a href="https://openreview.net/pdf/7bc3b57fd39fd3f981840b07bc885c6db00c23fd.pdf">Streamlining Language Models via Semantic Basis Analysis</a>".
+<br><i>Transactions on Machine Learning Research</i> (TMLR), 2025.</p>
 <p>
 &nbsp
 </p>
@@ -75,10 +75,6 @@
 <li><p>Maximilian Lam, Jeff Johnson, Wenjie Xiong, Kiwan Maeng, Udit Gupta, <b>Yang Li</b>, Liangzhen Lai, Illias Leontiadis, Minsoo Rhu, Hsien-Hsin Lee, Vijay Janapa Reddi, Gu-Yeon Wei, David Brooks, and Edward Suh.
 	<br>"<a href="https://arxiv.org/abs/2301.10904">GPU-based Private Information Retrieval for On-Device Machine Learning Inference</a>".
 <br><i>Proceedings of the ACM International Conference on Architectural Support for Programming Languages and Operating Systems</i> (ASPLOS), 2024. </p>
-<p>
-&nbsp
-</p>
-<li><p>Jamin Seo, <b>Yang Li</b>, Debabrata Mohapatra, Liangzhen Lai, Hyoukjun Kwon, Tushar Krishna. <br>"Memory Placement Policy Exploration for Dynamic Multi-model Multi-task ML Workloads”.<br> under review, 2024.</p>
 <p>
 &nbsp
 </p>
