--- a/Reviewer.html
+++ b/Reviewer.html
@@ -22,42 +22,48 @@
 <div id="toptitle">
 <h1>Service</h1>
 </div>
-<p>Program Committee Member:</p>
+<p>Conference Service:</p>
 <p>
 </p>
 <ul>
-<li><p>The IEEE/ACM Design Automation Conference (DAC), 2024</p>
+<li><p>Technical Program Committee, The IEEE/ACM Design Automation Conference (DAC), 2024</p>
 </li>
-<li><p>Conference on Neural Information Processing Systems (NeurIPS), 2024</p>
+<li><p>Reviewer, Conference on Neural Information Processing Systems (NeurIPS), 2024</p>
 </li>
-<li><p>International Conference on Learning Representations (ICLR), 2025</p>
+<li><p>Reviewer, International Conference on Learning Representations (ICLR), 2025</p>
+</li>
+<li><p>Program Committee Member, AAAI Conference on Artificial Intelligence (AAAI), 2026</p>
+</li>
+<li><p>Reviewer, ACL Rolling Review (ARR), 2026</p>
 </li>
 </ul>
 
 
-<p>Reviewer for the following journals:</p>
+<p>Journal Service:</p>
 <p>
 </p>
 <ul>
-<li><p>ACM Transactions on Architecture and Code Optimization (TACO)</p>
+<li><p>Reviewer, ACM Transactions on Architecture and Code Optimization (TACO)</p>
 </li>
-<li><p>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</p>
+<li><p>Reviewer, ACM Transactions on Knowledge Discovery from Data (TKDD)</p>
 </li>
-<li><p>IEEE Transactions on Parallel and Distributed Systems (TPDS)</p>
+<li><p>Reviewer, IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</p>
 </li>
-<li><p>IEEE/ACM Transactions on Networking (ToN)</p>
+<li><p>Reviewer, IEEE Transactions on Parallel and Distributed Systems (TPDS)</p>
 </li>
-<li><p>IEEE Transactions on Cloud Computing (TCC)</p>
+<li><p>Reviewer, IEEE/ACM Transactions on Networking (ToN)</p>
 </li>
-<li><p>IEEE Transactions on Computer-Aided Design of Integrated Circuits (TCAD)</p>
+<li><p>Reviewer, IEEE Transactions on Cloud Computing (TCC)</p>
 </li>
-<li><p>IEEE Computer Architecture Letters (CAL)</p>
+<li><p>Reviewer, IEEE Transactions on Computer-Aided Design of Integrated Circuits (TCAD)</p>
 </li>
-<li><p>IEEE Transactions on Emerging Topics in Computing (TETC)</p>
+<li><p>Reviewer, IEEE Computer Architecture Letters (CAL)</p>
 </li>
-<li><p>Journal of Systems and Software</p>
+<li><p>Reviewer, IEEE Transactions on Emerging Topics in Computing (TETC)</p>
 </li>
-<li><p>Pattern Recognition</p>
+<li><p>Reviewer, Journal of Systems and Software</p>
+</li>
+<li><p>Reviewer, Pattern Recognition</p>
 </li>
 </ul>
 </td>
