--- a/Publications.html
+++ b/Publications.html
@@ -49,7 +49,7 @@
 <p>
 &nbsp
 </p>
-<li><p><b>Yang Li*+</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"<a href="https://aclanthology.org/2025.naacl-industry.50/">Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Proceedings of the Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics: Human Language Technologies</i> (NAACL), Industry Track, 2025. (Also Selected for Oral Presentation).</p>
+<li><p><b>Yang Li*+</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"<a href="https://aclanthology.org/2025.naacl-industry.50/">Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Proceedings of the Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics</i> (NAACL), Industry Track, 2025. (Also Selected for Oral Presentation).</p>
 <p>
 &nbsp
 </p>
